# graduation_project

./: .clang-format  .gitignore  CMakeLists.txt  README.md  o0_adder_utils.py  o0_global_const.py  o0_linear_power_model.py  o0_logger.py  o0_mul_utils.py  o0_netlist.py  o0_rtl_tasks.py  o0_state.py  o1_environment.py  o1_environment_refine.py  o1_environment_speedup.py  o1_environment_speedup_backup.py  o1_environment_speedup_conventional.py  o1_environment_speedup_test_gamutation.py  o1_environment_speedup_timing_test.py  o1_environment_test.py  o1_environment_vectoradder.py  o1_environment_vectoradder_test.py  o1_environment_with_booth_speedup.py  o1_environment_with_booth_speedup_test.py  o2_policy.py  o2_policy_multiobj.py  o2_policy_refine.py  o2_policy_vectoradder.py  o2_sequence_policy.py  o3_trainer.py  o3_trainer_conventional.py  o3_trainer_multiobj.py  o3_trainer_multiobj_asyncdqn.py  o3_trainer_multiobj_dev.py  o3_trainer_refine.py  o3_trainer_vectoradder.py  o5_initial_state_evaluate.py  o5_utils.py  o5_utils_refine.py  o5_utils_vector_adder.py  (+16 more)
benchmarks/sim/: tpu_driver.cpp  tpu_driver_large.cpp  tpu_driver_large.h  tpu_like_large.cpp  tpu_like_small.cpp
dataset/: NangateOpenCellLibrary_typical.db
doc/: mask-DQN-theory-v0.md  mask-DQN-theory-v1.md  mask-DQN-theory-v2.md  mask-DQN-theory-v3-discrete.md  mask-DQN-theory-v3.md  mask-DQN-theory-v4-rc.md  mask-DQN-theory-v4.md  power_mip.md
offline_sl_code/: o1_dataloader.py  o2_trainer.py  o5_utils.py
prefix_adder/: o0_adder_utils.py  o1_environment_adder.py  o2_policy_adder.py  o3_trainer_adder.py  o4_pipeline_adder.py
utils/: compute_hv.py  expression_utils.py  get_ppa.py  mlp.py  npyToPareto_v3.py  operators.py  vectoraddertoverilog.py  wallace_gen_and.py  wallace_gen_booth.py  write_state.py
verilate/: CMakeLists.txt  sim_main.cpp  sim_main_adder.cpp
(+57 files in other folders)
